<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>spatz_display_rqt</name>
    <version>0.0.0</version>
    <description>TODO: Package description</description>
    <maintainer email="jonas@jonasotto.com">Jonas Otto</maintainer>
    <license>MIT</license>

    <exec_depend>rclpy</exec_depend>
    <exec_depend>rqt_gui</exec_depend>
    <exec_depend>rqt_gui_py</exec_depend>
    <exec_depend>rqt_py_common</exec_depend>

    <export>
        <architecture_independent/>
        <build_type>ament_python</build_type>
        <rqt_gui plugin="${prefix}/plugin.xml"/>
    </export>
</package>
